--- a/style.css
+++ b/style.css
@@ -63,6 +63,10 @@ background-image: linear-gradient(to bottom right, rgb(125, 141, 125), rgb(13, 2
  list-style: none;
 }
 
+#search {
+ margin: 1em;
+}
+
 
 .header-text {
  align-self: flex-end;
@@ -117,4 +121,20 @@ a :hover {
 footer {
  text-align: center;
  margin: 0;
+}
+
+
+.end{
+ display: flex;
+ justify-content: center;
+ list-style: none;
+ margin: 2em;
+}
+
+.endli {
+ margin-left: 1.3em;
+}
+
+span {
+ margin-bottom: 1em;
 }
